- 
    Bug 
- 
    Resolution: Done
- 
     Not Evaluated Not Evaluated
- 
    Qt Creator 2.3.0
- 
    None
- 
    Mac OSX
- 
        3955df7855c9d27d8d470f509578bd9004b72ea1
The default (done) button should be on the right on OSX. See QDialogButtonBox.
| For Gerrit Dashboard: QTCREATORBUG-6156 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V | 
| 5406,4 | Move wizards' cancel button to the left on Mac. | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |