Move wizards' cancel button to the left on Mac.

It is too far to the left now, but that can't be helped
(it's a Qt limitation).

Task-number: QTCREATORBUG-6156
Change-Id: I0201356234abb618dc3b573673d512c0a97c4839
Reviewed-on: http://codereview.qt-project.org/5406
Reviewed-by: Qt Sanity Bot <qt_sanity_bot@ovi.com>
Reviewed-by: Daniel Teske <daniel.teske@nokia.com>